--- a/moreapp/src/main/res/values/strings.xml
+++ b/moreapp/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">moreapp</string>
+    <string name="app_name">More Apps</string>
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
 </resources>
